[package]
name = "darktide-local-server"
version = "1.0.0"
edition = "2021"
rust-version = "1.72"
description = "Small local server for use with Warhammer 40,000: Darktide mods"
repository = "https://github.com/ronvoluted/darktide-local-server"
authors = ["ronvoluted (Seventeen)"]

[dependencies]
mime_guess = "2.0.4"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sysinfo = "0.29.10"
tiny_http = "0.12.0"
url = "2.4.1"
winapi = { version = "0.3.9", features = ["errhandlingapi", "ntdef", "synchapi", "winbase", "winerror"] }

[[bin]]
name = "DarktideLocalServer"
path = "src/main.rs"
